--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DiaryConnection": "Server = VIEN_AUTO\\VIENHS; Database = DiaryProject; User Id = sa; Password = 1111; TrustServerCertificate = true"
+    "DiaryConnection": "Server = 117.3.250.40,1433; Database = DiaryProject; User Id = sa; Password = 1111; TrustServerCertificate = true"
   }
 }
